@@ -1,3 +1,9 @@
+2006-11-20 Mathieu Blondel <mblondel@cvs.gnome.org>
+
+    * lib/fantasdic/ui/main_app.rb: also close scan_clipboard thread if needed
+    * lib/fantasdic/ui/result_text_view.rb: remove marks when text buffer is
+    cleared
+
 2006-11-18 Mathieu Blondel <mblondel@cvs.gnome.org>
 
     * lib/fantasdic/ui/add_dictionary_dialog.rb: use focus-out-event
